# GAAlign

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  FindGPC.cmake  LICENSE  README.md
resources/: Bunny_Src.ply  Bunny_Src_rotated.ply  Bunny_Src_translated.ply  Bunny_Target.ply  DragonV2_Src.ply  DragonV2_Target.ply  Dragon_src.ply  Dragon_target.ply  Lucy_Src.ply  Lucy_Target.ply  SuzanneV2_Src.ply  SuzanneV2_Target.ply  Suzanne_src.ply  Suzanne_src_high.ply  Suzanne_target.ply  Suzanne_target_high.ply
resources/models/: Bunny.ply  Dragon.ply  Lucy.ply  Ship.ply  Suzanne.ply
src/app/: CMakeLists.txt  main.cpp
src/correspondence/: CMakeLists.txt  correspondence_search.h
src/correspondence/distance/: distance_search.cpp  distance_search.h
src/correspondence/feature/: feature_search.cpp  feature_search.h
src/correspondence/naive/: naive_search.cpp  naive_search.h
src/correspondence/teaser/: fpfh.cc  fpfh.h  matcher.cc  matcher.h
src/gaalet/: CMakeLists.txt  gaalet.h
src/geometry/: CMakeLists.txt  common.h  motor.cpg  motor.cpp  motor.h  motor_estimation.cpg  motor_estimation.cpp  motor_estimation.h  motor_estimation_sse.cpp  motor_estimation_sse.h  point_cloud.cpp  point_cloud.h
src/optimization/: CMakeLists.txt  fast_shuffle.cpp  fast_shuffle.h  fast_shuffle_pcg.h  optimizer.h
src/optimization/gradient_descent/: gradient_descent.cpp  gradient_descent.h
src/optimization/gradient_descent_cuda/: gradient_descent_cuda.cu  gradient_descent_cuda.cug  gradient_descent_cuda.h
src/registration/: CMakeLists.txt  registration_pipeline.cpp  registration_pipeline.h  registration_step.cpp  registration_step.h
src/testbench/: CMakeLists.txt  algorithm_comparison.cpp  algorithm_comparison.h  common.cpp  common.h  gradient_descent_hyperparameter_optimization.cpp  gradient_descent_hyperparameter_optimization.h  hyperparameter_evaluation.cpp  hyperparameter_evaluation.h  performance_evaluation.cpp  performance_evaluation.h  robustness_tests.cpp  robustness_tests.h  synthetic_data_generator.cpp  synthetic_data_generator.h  testbench.cpp
src/testbench/game/: MotorEstimationSolver.h  adept_autodiff_cost_function.h  adept_autodiff_local_parameterization.h  motor_parameterization.h  scoped_ptr.h
src/testbench/game/vsr/: algebra.h  cga_types.h  products.h  vsr.h
src/testbench/wrappers/: algorithm_wrapper.h  fgr_wrapper.cpp  fgr_wrapper.h  ga_lms_wrapper.cpp  ga_lms_wrapper.h  gaalign_wrapper.cpp  gaalign_wrapper.h  go_icp_wrapper.cpp  go_icp_wrapper.h  opencv_icp_wrapper.cpp  opencv_icp_wrapper.h  pcl_icp_wrapper.cpp  pcl_icp_wrapper.h  super4pcs_wrapper.cpp  super4pcs_wrapper.h
src/testbench/wrappers_optim/: ga_lms_optimization_wrapper.cpp  ga_lms_optimization_wrapper.h  gaalign_cuda_optimization_wrapper.cpp  gaalign_cuda_optimization_wrapper.h  gaalign_optimization_wrapper.cpp  gaalign_optimization_wrapper.h  game_optimization_wrapper.cpp  game_optimization_wrapper.h  optimization_wrapper.h  pcl_optimization_wrapper.cpp  pcl_optimization_wrapper.h
src/visualization/: CMakeLists.txt  visualize.cpp  visualize.h
